--- a/cookbooks/elasticsearch/templates/default/elasticsearch.yml.erb
+++ b/cookbooks/elasticsearch/templates/default/elasticsearch.yml.erb
@@ -2,10 +2,14 @@ path:
   work: /var/lib/elasticsearch/work
   logs: /var/log/elasticsearch
   data: /data/elasticsearch
-  
+
 
 cluster:
   name: <%= @elasticsearch_clustername %>
+
+network:
+  bind_host: [127.0.0.1, <%= @elasticsearch_host %>]
+  publish_host: <%= @elasticsearch_host %>
 
 discovery:
   zen:
